--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="dbname_followers">followers</string>
     <string name="dbname_messages">messsages</string>
     <string name="dbname_coversations">conversations</string>
+    <string name="dbname_notification">notification</string>
     <string name="field_user_id">user_id</string>
 
 
