--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
 
     <string name="bundle_photo">bundle_photo</string>
     <string name="bundle_user_account_settings">bundle_user_account_settings</string>
+    <string name="title_activity_layout_messages_chatitem_r">layout_messages_chatitem_r</string>
 
 
 </resources>
